--- a/styles.css
+++ b/styles.css
@@ -116,10 +116,11 @@ h3{
 }
 
 a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    font-size: 25px;
 }
 
 .space1{
@@ -132,9 +133,4 @@ a {
     width: 4px;
     height: auto;
     display: inline-block;
-}
-
-.implinkcont{
-    font-size: 8;
-    color: white;
 }
