--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,7 @@ h3{
     display: block;
 }
   
-.dropdown-content a:hover {
-    background-color:#F7F7F7;
-    font-weight: 800;
-}
+.dropdown-content a:hover {background-color:#F7F7F7; }
   
 .dropdown:hover .dropdown-content {
     display: block;
@@ -107,30 +104,4 @@ h3{
     border-width: 1px;
     width: 80%;
     border-color:#BBBBBB ;
-}
-
-.implink{
-    background-color: #1ca999ac;
-    width: 60%;
-    height:500px;
-}
-
-a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-size: 25px;
-}
-
-.space1{
-    width: 5px;
-    height: auto;
-    display: inline-block;
-}
-
-.space2{
-    width: 4px;
-    height: auto;
-    display: inline-block;
 }
