--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body{
-    background-color: #eaf6f2;
+    background-color: #EAF6F6; 
 }
 
+hr{
+    border-style: dotted none none;
+    border-width: 11px;
+    width: 7%;
+    border-color:#BBBBBB ;
+}
 
 /*img{
     width: 650px;
@@ -60,11 +66,13 @@ h3{
     border-radius: 7px;
     width: 180px;
     height: 50px;
+    background-image: linear-gradient(36deg,  #CAF0F8, #fbdeb8)
 }
   
 .dropdown {
     position: relative;
     display: inline-block;
+    
 }
   
 .dropdown-content {
@@ -73,7 +81,8 @@ h3{
     background-color: #eaeaea;
     width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;;
+    z-index: 1;
+    border-radius: 15px;
 }
   
 .dropdown-content a {
@@ -83,14 +92,19 @@ h3{
     display: block;
 }
   
-.dropdown-content a:hover {background-color:#F7F7F7;font-weight: 900;}
+.dropdown-content a:hover {
+    background-color:#F7F7F7;
+    font-weight: 800;
+}
   
 .dropdown:hover .dropdown-content {
     display: block;
+    border-radius: 15px;
 }
   
 .dropdown:hover .dropbtn {
-    background-color: #F7F7F7;
+    /*background-color: #F7F7F7;*/
+    background-image: linear-gradient(180deg,  #CAF0F8, #fbdeb8);
 }
 
 .dropdownl{
@@ -99,36 +113,51 @@ h3{
     width: 80%;
     border-color:#BBBBBB ;
 }
-.w3-left, .w3-right, .w3-badge {cursor:pointer}
-.w3-badge {height:13px;width:13px;padding:0}
+
 .implink{
     background-color:#237c89;
     width: 60%;
-    height:650px;
+    height:600px;
     border-radius: 12px;
 }
 
-.a1 {
+a{
     color: white;
-    padding: 12px 16px; 
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 25px;
 }
 
-.HRsmall{
-    width:5%;
-    height:8px;
-    background-color:#008ec1 ;
+.space1{
+    width: 5px;
+    height: auto;
+    display: inline-block;
 }
 
-.grad{
-    background-color: #c2e59c; /* For browsers that do not support gradients */
-    background-image: linear-gradient(#B8FFF9,#FFBED8,#FFC286);
+.space2{
+    width: 4px;
+    height: auto;
+    display: inline-block;
 }
 
-.HRsmall2{
-    width: 12%;
-    height: 6px;
-    background-color: yellow;
+h2{
+    color: #0b6b41f0;
+    font-size: 35px;
+}
+
+.background{
+    background-image: url("../Corridor.jpeg");
+    background-size: cover;
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    filter: blur(20px);
+
+
+}
+
+.bgtext{
+    filter: blur(0px);
+  
 }
