--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #EAF6F6; 
+    background-color: #EAF6F6;
 }
 
 hr{
@@ -66,13 +66,11 @@ h3{
     border-radius: 7px;
     width: 180px;
     height: 50px;
-    background-image: linear-gradient(36deg,  #CAF0F8, #fbdeb8)
 }
   
 .dropdown {
     position: relative;
     display: inline-block;
-    
 }
   
 .dropdown-content {
@@ -82,7 +80,6 @@ h3{
     width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    border-radius: 15px;
 }
   
 .dropdown-content a {
@@ -92,19 +89,14 @@ h3{
     display: block;
 }
   
-.dropdown-content a:hover {
-    background-color:#F7F7F7;
-    font-weight: 800;
-}
+.dropdown-content a:hover {background-color:#F7F7F7; }
   
 .dropdown:hover .dropdown-content {
     display: block;
-    border-radius: 15px;
 }
   
 .dropdown:hover .dropbtn {
-    /*background-color: #F7F7F7;*/
-    background-image: linear-gradient(180deg,  #CAF0F8, #fbdeb8);
+    background-color: #F7F7F7;
 }
 
 .dropdownl{
@@ -112,52 +104,4 @@ h3{
     border-width: 1px;
     width: 80%;
     border-color:#BBBBBB ;
-}
-
-.implink{
-    background-color:#237c89;
-    width: 60%;
-    height:600px;
-    border-radius: 12px;
-}
-
-a{
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-size: 25px;
-}
-
-.space1{
-    width: 5px;
-    height: auto;
-    display: inline-block;
-}
-
-.space2{
-    width: 4px;
-    height: auto;
-    display: inline-block;
-}
-
-h2{
-    color: #0b6b41f0;
-    font-size: 35px;
-}
-
-.background{
-    background-image: url("../Corridor.jpeg");
-    background-size: cover;
-    padding-top: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    filter: blur(20px);
-
-
-}
-
-.bgtext{
-    filter: blur(0px);
-  
 }
