--- a/cards.css
+++ b/cards.css
@@ -3,14 +3,13 @@
     padding: 0px;
 }
 
-/*.main{
+.main{
 
-}*/
+}
 
 .card1{
     width: 20%;
-    /*background-color: rgb(155, 221, 228);*/
-    background-image: linear-gradient(to top, #4a6dc7,#199999);
+    background-color: rgb(155, 221, 228);
     border-radius: 5px;
     margin: 20px;
     border-style: solid;
